# similarity

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  test_classes.ts  test_cross_type_comparison.ts  test_inheritance.ts  test_type_literals.ts
.github/workflows/: release.yaml  rust.yaml
crates/core/: Cargo.toml
crates/similarity-css/: Cargo.toml  README.md
crates/similarity-css/examples/: real_world_demo.css  shorthand_test.css  test.css  test.scss
crates/similarity-css/examples/scss-bem/: button-component.scss  card-component.scss  form-component.scss  navigation-component.scss
crates/similarity-css/src/: css_comparator.rs  css_parser.rs  css_rule_converter.rs  duplicate_analyzer.rs  lib.rs  main.rs  parser.rs  scss_flattener.rs  scss_simple_flattener.rs  shorthand_expander.rs  specificity.rs
crates/similarity-css/tests/: bem_detection_test.rs  comparator_test.rs  css_edge_cases_test.rs  edge_cases_test.rs  integration_test.rs  parser_test.rs  performance_analysis_test.rs  performance_test.rs  real_world_test.rs  scss_complex_test.rs  shorthand_integration_test.rs  shorthand_test.rs
crates/similarity-elixir/: Cargo.toml
crates/similarity-generic/: Cargo.toml
crates/similarity-mbt/: Cargo.toml
examples/: duplicate_moonbit.mbt  identical_enums.rs  many_types.ts  rust_test_patterns.rs  rust_types_example.rs  test_css_structures.css  test_different_css.css  test_different_structures.rs  test_different_ts_structures.ts  test_enums.rs  test_ignore_directive.ts  test_rust_structures.rs  test_rust_with_derives.rs  test_structure_comparison.ts
(+82 files in other folders)
